--- a/style.css
+++ b/style.css
@@ -82,7 +82,12 @@ header nav a:hover {
 	border: 2px solid #000; 
 }
 
-
+#second_page_title {
+	text-align: center;
+	font-size: 30px;
+	font-weight: 200;
+	margin: 50px 0 70px 0;
+}
 
 /* main styles*/
 main::after {
@@ -240,3 +245,45 @@ footer p span {
 	text-decoration:underline;
 	color:#fff;
 }
+
+/* CONTACTS PAGE START*/
+
+#contacts_page_main section {
+	width:1100px;
+	margin: 0 auto 70px auto;
+}
+
+
+
+#contacts_page_main section::after{
+	content: "";
+	clear: both;
+	display: block;
+}
+
+#contacts_page_main section iframe, #contacts_page_main section aside {
+	display: block;
+	width: 550px;
+	float: left;
+
+}
+
+#contacts_page_main section aside {
+	padding: 0 25px;
+}
+
+#contacts_page_main section aside ul li{
+	margin: 0 0 10px 0;
+	font-size: 20px;
+	font-weight: 700;
+	color:#000;
+}
+
+#contacts_page_main section aside ul li a {
+	color: green;
+}
+#contacts_page_main section aside ul li a:hover {
+	background: #000;
+	color:green;
+}
+
